--- a/index.html
+++ b/index.html
@@ -22,18 +22,43 @@
 
     <main>
         <h1>Ducati Panigale V4</h1>
-
+    
         <section class="gallery">
-            <img src="src/thumbnails/th1.jpg" alt="Miniatura 1">
-            <img src="src/thumbnails/th2.jpg" alt="Miniatura 2">
-            <img src="src/thumbnails/th3.jpg" alt="Miniatura 3">
-            <img src="src/thumbnails/th4.jpg" alt="Miniatura 4">
-            <img src="src/thumbnails/th5.jpg" alt="Miniatura 5">
-            <img src="src/thumbnails/th6.jpg" alt="Miniatura 6">
-            <img src="src/thumbnails/th7.jpg" alt="Miniatura 7">
-            <img src="src/thumbnails/th8.jpg" alt="Miniatura 8">
+            <figure>
+                <img src="src/thumbnails/th1.jpg" alt="Vista frontal de la Ducati Panigale V4">
+                <figcaption>Vista frontal-lateral dreta - Elegància i potència.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th2.jpg" alt="Vista lateral esquerra de la Ducati Panigale V4">
+                <figcaption>Vista frontal - Control i precisió en cada detall.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th3.jpg" alt="Vista posterior de la Ducati Panigale V4">
+                <figcaption>Vista frontal-lateral esquerra - Una màquina que destaca des de qualsevol angle.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th4.jpg" alt="Detall del motor de la Ducati Panigale V4">
+                <figcaption>Vista posterior-lateral dreta - Tecnologia avançada al servei del rendiment.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th5.jpg" alt="Ducati Panigale V4 en moviment">
+                <figcaption>Vista de la forquilla - Experiència de conducció incomparable.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th6.jpg" alt="Primer pla del manillar de la Ducati Panigale V4">
+                <figcaption>Vista lateral esquerra - Un disseny aerodinàmic impecable.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th7.jpg" alt="Ducati Panigale V4 a la pista">
+                <figcaption>Vista del morro - Preparada per a la velocitat i l’adrenalina.</figcaption>
+            </figure>
+            <figure>
+                <img src="src/thumbnails/th8.jpg" alt="Ducati Panigale V4 aparcada a l'exterior">
+                <figcaption>Vista posterior - Una màquina que destaca des de qualsevol angle.</figcaption>
+            </figure>
         </section>
     </main>
+    
 
     <footer>
         &copy; 2025 Ducati
